--- a/.github/workflows/deploy-buzzer.yaml
+++ b/.github/workflows/deploy-buzzer.yaml
@@ -1,14 +1,15 @@
-# GitHub Actions Workflow to deploy the Poker Dice game
+# GitHub Actions Workflow to deploy the Poker Dice game to sarcastichedgehog.com/pokerdice
 
 name: Deploy Poker Dice to GitHub Pages
 
-# Run this workflow every time a change is pushed to the main branch
+# This workflow runs on pushes to the main branch or when manually triggered
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
-# A single job called "deploy"
+# A single deployment job
 jobs:
   deploy:
     # Use the latest version of Ubuntu to run the job
@@ -19,28 +20,26 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2: Create the config.js file from secrets
-      # This is the crucial step that securely injects your API keys
+      # Step 2: Create the production config.js file from GitHub secrets
       - name: Create config.js for Poker Dice
         run: |
           echo "Generating config.js from secrets..."
           echo "window.APP_CONFIG = {" > config.js
           echo "  API_KEY: \"${{ secrets.MULTISYNQ_API_KEY }}\"," >> config.js
           echo "  APP_ID: \"${{ secrets.MULTISYNQ_APP_ID }}\"," >> config.js
-          echo "  BASE_URL: \"${{ secrets.MULTISYNQ_BASE_URL }}\"" >> config.js
+          # The BASE_URL should point to the final URL of the game
+          echo "  BASE_URL: \"https://sarcastichedgehog.com/pokerdice\"" >> config.js
           echo "};" >> config.js
 
-      # Step 3: Deploy the contents to the gh-pages branch in the /dice folder
+      # Step 3: Deploy the contents to the gh-pages branch
+      # This action will build and push your project to the deployment branch
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           # The branch the action should deploy to.
           branch: gh-pages
-          # The folder the action should deploy.
-          # '.' means the entire repository root.
+          # The folder the action should deploy. '.' means the entire repository root.
           folder: .
-          # The folder to deploy the files to in the target branch.
-          # This will place your game in the /dice directory.
-          target-folder: dice
-          # Automatically remove files from the target folder that are not in the source folder.
+          # No target-folder is needed, as the repo name 'pokerdice' provides the path.
+          # Automatically removes files from the gh-pages branch that are no longer in the main branch.
           clean: true
